# reproduce-distributed-quantum-ML-via-CC

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
DQML/: CCDQML_depth3_1  Demo.ipynb  README.md  Rank_CCDQML4
DQML/DQML/: Circuit.py  Circuitblocks.py  EffectiveDimension.py  Loss.py  Machine.py  Run.py
DQML/DatafromPaper/: Plot.ipynb
DQML/DatafromPaper/CCDQML/: CCDQML_depth15_Dataset3_1  CCDQML_depth15_Dataset3_10  CCDQML_depth15_Dataset3_2  CCDQML_depth15_Dataset3_3  CCDQML_depth15_Dataset3_4  CCDQML_depth15_Dataset3_5  CCDQML_depth15_Dataset3_6  CCDQML_depth15_Dataset3_7  CCDQML_depth15_Dataset3_8  CCDQML_depth15_Dataset3_9  CCDQML_depth20_Dataset3_1  CCDQML_depth20_Dataset3_10  CCDQML_depth20_Dataset3_2  CCDQML_depth20_Dataset3_3  CCDQML_depth20_Dataset3_4  CCDQML_depth20_Dataset3_5  CCDQML_depth20_Dataset3_6  CCDQML_depth20_Dataset3_7  CCDQML_depth20_Dataset3_8  (+121 more)
DQML/Dataset/: ClusterDataset.ipynb  Dataset1  Dataset2  Dataset3
config-example/: cc_dqml.yaml
docs/: project-plan.md
docs/arXiv-2408.16327v1/: Fig1_final.eps  Fig2_final.eps  Fig4_final.eps  Fig5_final.eps  Fig6_final.eps  Final.bbl  Final.tex  png-converter.py
notebooks/: 01_cc_dqml_walkthrough.ipynb  02_circuits_deep_dive.ipynb  03_data_deep_dive.ipynb  04_training_deep_dive.ipynb  understand_circuit_44_ccdqml.ipynb
results-example/smoke_cc_dqml/: config_snapshot.json  metrics.csv  summary.json
results-example/sprint1_cc_dqml/: config_snapshot.json  metrics.csv  summary.json
src/cc_dqml/: __init__.py  circuits.py  config.py  data.py  evaluate.py  train.py
(+494 files in other folders)
