[project]
name = "reproduce-distributed-quantum-ml-via-cc"
version = "0.1.0"
description = "Reproduction workspace for Distributed quantum machine learning via classical communication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pennylane",
    "qutip",
    "scipy",
]
